// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`browse in bento snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f4f4f5",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#f4f4f5",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              {
                "gap": 6,
                "marginBottom": 6,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#0a0a0a",
                  "fontSize": 28,
                  "fontWeight": "700",
                }
              }
            >
              Browse
            </Text>
            <Text
              style={
                {
                  "color": "#71717a",
                  "lineHeight": 20,
                }
              }
            >
              Search product notes, expiry patterns, and pantry staples when catalog data is ready.
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderWidth": 1,
                  "gap": 12,
                  "minHeight": 44,
                  "padding": 24,
                },
                {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#e4e4e7",
                  "borderRadius": 22,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "height": 60,
                    "justifyContent": "center",
                    "width": 60,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderRadius": 18,
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 20,
                    "fontWeight": "700",
                    "textAlign": "center",
                  },
                  {
                    "color": "#0a0a0a",
                  },
                ]
              }
            >
              Catalog coming next
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 20,
                    "maxWidth": 270,
                    "textAlign": "center",
                  },
                  {
                    "color": "#71717a",
                  },
                ]
              }
            >
              For now, scan from Home to add items. Browse will become the product catalog and lookup hub.
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`browse in clay snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#fff7f0",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#fff7f0",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              {
                "gap": 6,
                "marginBottom": 6,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#5b3a1f",
                  "fontSize": 28,
                  "fontWeight": "700",
                }
              }
            >
              Browse
            </Text>
            <Text
              style={
                {
                  "color": "#a47148",
                  "lineHeight": 20,
                }
              }
            >
              Search product notes, expiry patterns, and pantry staples when catalog data is ready.
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderWidth": 1,
                  "gap": 12,
                  "minHeight": 44,
                  "padding": 24,
                },
                {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#fde0c2",
                  "borderRadius": 28,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "height": 60,
                    "justifyContent": "center",
                    "width": 60,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderRadius": 22,
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 20,
                    "fontWeight": "700",
                    "textAlign": "center",
                  },
                  {
                    "color": "#5b3a1f",
                  },
                ]
              }
            >
              Catalog coming next
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 20,
                    "maxWidth": 270,
                    "textAlign": "center",
                  },
                  {
                    "color": "#a47148",
                  },
                ]
              }
            >
              For now, scan from Home to add items. Browse will become the product catalog and lookup hub.
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`browse in expyrico snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#0b0a17",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#0b0a17",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              {
                "gap": 6,
                "marginBottom": 6,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#fafafa",
                  "fontSize": 28,
                  "fontWeight": "700",
                }
              }
            >
              Browse
            </Text>
            <Text
              style={
                {
                  "color": "rgba(250,250,250,0.7)",
                  "lineHeight": 20,
                }
              }
            >
              Search product notes, expiry patterns, and pantry staples when catalog data is ready.
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderWidth": 1,
                  "gap": 12,
                  "minHeight": 44,
                  "padding": 24,
                },
                {
                  "backgroundColor": "rgba(255,255,255,0.08)",
                  "borderColor": "rgba(255,255,255,0.12)",
                  "borderRadius": 28,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "height": 60,
                    "justifyContent": "center",
                    "width": 60,
                  },
                  {
                    "backgroundColor": "rgba(255,255,255,0.06)",
                    "borderRadius": 20,
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 20,
                    "fontWeight": "700",
                    "textAlign": "center",
                  },
                  {
                    "color": "#fafafa",
                  },
                ]
              }
            >
              Catalog coming next
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 20,
                    "maxWidth": 270,
                    "textAlign": "center",
                  },
                  {
                    "color": "rgba(250,250,250,0.7)",
                  },
                ]
              }
            >
              For now, scan from Home to add items. Browse will become the product catalog and lookup hub.
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`browse in material snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f0e8ff",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#f0e8ff",
          },
        ]
      }
    >
      <RCTScrollView
        contentContainerStyle={
          [
            {
              "flexGrow": 1,
            },
            {
              "gap": 16,
              "padding": 24,
              "paddingBottom": 110,
            },
          ]
        }
        showsVerticalScrollIndicator={false}
        style={
          {
            "flex": 1,
          }
        }
      >
        <View>
          <View
            style={
              {
                "gap": 6,
                "marginBottom": 6,
              }
            }
          >
            <Text
              style={
                {
                  "color": "#1d1b20",
                  "fontSize": 28,
                  "fontWeight": "700",
                }
              }
            >
              Browse
            </Text>
            <Text
              style={
                {
                  "color": "#65558f",
                  "lineHeight": 20,
                }
              }
            >
              Search product notes, expiry patterns, and pantry staples when catalog data is ready.
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "borderWidth": 1,
                  "gap": 12,
                  "minHeight": 44,
                  "padding": 24,
                },
                {
                  "backgroundColor": "#ffffff",
                  "borderColor": "#e0e0e0",
                  "borderRadius": 28,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "height": 60,
                    "justifyContent": "center",
                    "width": 60,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderRadius": 24,
                  },
                ]
              }
            />
            <Text
              style={
                [
                  {
                    "fontSize": 20,
                    "fontWeight": "700",
                    "textAlign": "center",
                  },
                  {
                    "color": "#1d1b20",
                  },
                ]
              }
            >
              Catalog coming next
            </Text>
            <Text
              style={
                [
                  {
                    "fontSize": 14,
                    "lineHeight": 20,
                    "maxWidth": 270,
                    "textAlign": "center",
                  },
                  {
                    "color": "#65558f",
                  },
                ]
              }
            >
              For now, scan from Home to add items. Browse will become the product catalog and lookup hub.
            </Text>
          </View>
        </View>
      </RCTScrollView>
    </RNCSafeAreaView>
  </View>
</View>
`;
